# photo-critique-agent

./: README.md  pyproject.toml
examples/sample_output/: assets.json  critique_report.html  critique_report.md  results.json
output/: assets.json
src/photo_critique_agent/: __init__.py  cli.py
src/photo_critique_agent/critique/: __init__.py  evaluator.py  pipeline.py
src/photo_critique_agent/ingestion/: __init__.py  csv_metadata.py  discovery.py  exif.py  pipeline.py
src/photo_critique_agent/models/: __init__.py  critique.py  job.py  persona.py  photo.py  report.py
src/photo_critique_agent/personas/: __init__.py  commercial.yaml  documentary.yaml  fine_art.yaml  minimalist.yaml  social_media.yaml  street.yaml  travel.yaml  wildlife.yaml
src/photo_critique_agent/reporting/: __init__.py  renderer.py
src/photo_critique_agent/templates/: report.html.j2  report.md.j2
tests/: test_critique_pipeline.py  test_ingestion.py  test_models.py  test_reporting.py
